<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/single_row"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#00BBff"
    tools:context="com.example.dadabhagwan.mytask.SingleRowActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/FirstName"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_marginStart="41dp"
        android:id="@+id/etFirstName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/LastName"
        android:ems="10"
        android:layout_below="@+id/etFirstName"
        android:layout_alignStart="@+id/etFirstName"
        android:layout_marginTop="29dp"
        android:id="@+id/etLastName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"

        android:hint="@string/RollNo"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:id="@+id/etRollNumber"
        android:layout_below="@+id/etLastName"
        android:layout_alignStart="@+id/etLastName" />

    <Spinner
        android:entries="@array/cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRollNumber"
        android:layout_marginTop="36dp"
        android:id="@+id/spinnerCity" />

    <RadioGroup
        android:id="@+id/RgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerCity"
        android:layout_alignStart="@+id/etRollNumber"
        android:layout_marginTop="29dp" >

    <RadioButton
        android:text="@string/Male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerCity"
        android:layout_alignStart="@+id/RgGender"
        android:layout_marginTop="14dp"
        android:id="@+id/RbtnMale" />

    <RadioButton
        android:text="@string/Female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/RbtnMale"
        android:layout_alignEnd="@+id/etRollNumber"
        android:layout_marginEnd="40dp"
        android:id="@+id/RbtnFemale" />
    </RadioGroup>

    <TextView
        android:textSize="20sp"
        android:text="@string/Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerCity"
        android:layout_alignStart="@+id/RgGender"
        android:layout_marginStart="13dp"
        android:layout_marginTop="17dp"
        android:id="@+id/textView" />

    <Button
        android:text="@string/btnSaveActivity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RgGender"
        android:layout_alignEnd="@+id/etRollNumber"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="40dp"
        android:id="@+id/btnSave" />
</RelativeLayout>
