<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/FirstName"
        android:ems="10"
        android:id="@+id/ExtFirsName" />
    <EditText
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/LastName"
        android:ems="10"
        android:id="@+id/EtxtLastname" />
    <Button
        android:id="@+id/btnUpdate"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/btnSaveActivity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <!--<Button-->
        <!--android:id="@+id/btnBackUpdate"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:text="Update"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--/>-->
</LinearLayout>
